deployment/core-app/core-app.service.yml
apiVersion: v1
kind: Service
metadata:
  name: core-app
  namespace: k8s-demo
  labels:
    app: core-app
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: core-app
